--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -581,6 +581,57 @@ Your Student Download Serial Number is:
 \end{center}
 \end{frame}
 
+\section{Python}
+
+\begin{frame}\frametitle{Google Colab and Jupyter \footnote{formerly ipython or interactive python} Notebooks}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3.5cm]{fig/colab.png}
+\includegraphics[width=4cm]{fig/jupyter.png}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Colab is a hosted Jupyter Notebook service that requires no setup to use and provides free access to computing resources, including GPUs and TPUs. Colab is especially well suited to machine learning, data science, and education.
+\item Jupyter Notebook is an interactive web application for creating and sharing computational documents. It supports more than 40 languages including Python, R, and Scala.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Python}
+\begin{columns}
+\begin{column}{3.5cm}
+\begin{center}
+\includegraphics[width=3.5cm]{fig/python1.png}
+\end{center}
+\end{column}
+\begin{column}{7.5cm}
+\begin{itemize}
+\item Easy to understand: Python’s readability, non-complexity and ability for fast prototyping contribute to its popularity. 
+\item Libraries: Python comes with numerous built-in libraries that are well suited for data mining, machine learning and AI.
+\item Easier, more powerful implementation: With Python, programmers spend less time writing code and debugging errors compared with other languages.
+\item Syntax: Python uses modern scripting and friendly syntax.
+\end{itemize}
+\end{column}
+\end{columns}
+
+
+\end{frame}
+
+\begin{frame}\frametitle{Python Libraries}
+Python libraries are collections of pre-written code, including modules and routines, that provide specific functionality to developers. 
+\begin{itemize}
+\item Numpy: fundamental package for scientific computing in Python. It is a Python library that provides a multidimensional array objects. It contains routines for operations on arrays, including mathematical, logical, shape manipulation,  basic linear algebra, basic statistical operations, random simulation, etc.
+\item Scipy: algorithms for optimization, integration, interpolation, eigenvalue problems, algebraic equations, differential equations, statistics and many other classes of problems.
+\item Matplotlib: Matplotlib is a comprehensive library for creating static, animated, and interactive visualizations in Python.
+\end{itemize}
+
+Getting Started: 
+\url{https://colab.research.google.com/github/data-psl/lectures2020/blob/master/notebooks/01_python_basics.ipynb}
+\end{frame}
+
 \section{Atomic Quantum Systems}
 
 \section{Vacuum Systems}
@@ -1334,7 +1385,7 @@ If an object is held closer to the converging lens than its focal length ($f$), 
 \begin{column}{5.5cm}
 \begin{center}
 \includegraphics[width=5cm]{fig/beamXkepler.png}
-Galilean Design
+Keplerian Design
 \end{center}
 \end{column}
 \begin{column}{5.5cm}
