--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -2313,6 +2313,10 @@ Using the ThorLabs Michelson Interferometer Kit:
 \end{itemize}
 \end{column}
 \end{columns}
+
+\vspace{1.0cm}
+
+Optional: if instructed, repeat Chapter 6.3 Spectrometer experiment using the laser from the Optical Tweezers at above and below the lasing threshold.
 \end{frame}
 
 \begin{frame}\frametitle{Assignment: Michelson Interferometer 3}
@@ -2332,7 +2336,8 @@ Using the ThorLabs Michelson Interferometer Kit:
 \item Setup per Chapter 4
 \item Measure index of refraction (Chapter 6.5)
 \item Measure thermal expansion (Chapter 6.6)
-\item When told: teardown setup completely and store
+\item When told: teardown setup completely, clean optics, and store
+\item As a group, answer the questions in Chapter 8.
 \end{itemize}
 \end{column}
 \end{columns}
@@ -2441,7 +2446,23 @@ From \url{https://emanim.szialab.org/}
 \end{center}
 \end{frame}
 
+\section{Quantum Crytography - Quantum Key Distribution}
 
+\begin{frame}\frametitle{Assignmet: Quantum Key Distribution}
+\begin{columns}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/ThorQKD.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Some Items
+\item Another Item
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
 
 \section{The Atom and Quantum Mechanics}
 
