--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -1816,6 +1816,102 @@ For a mirror that is large compared to the radius of curvature, the reflected ra
 
 \section{Wave Optics}
 
+\begin{frame}\frametitle{Light as an Electromagnetic Wave}
+\begin{columns}
+\begin{column}{7cm}
+\begin{center}
+\includegraphics[width=7cm]{fig/emwave2.png}
+\end{center}
+\end{column}
+\begin{column}{4cm}
+\begin{itemize}
+\item Wavelength ($\lambda$) is the distance between peaks.
+\item Amplitude (A) is the value between 0 and peak. Or half the distance between peak and trough.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Electro-Magnetic Spectrum}
+\begin{center}
+\includegraphics[width=10cm]{fig/emspectrum.png}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Light as Wave (Wave Equation)}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/emwave3.png}
+
+\vspace{1cm}
+
+\includegraphics[width=2cm]{fig/phi.png}
+
+\end{center}
+\end{column}
+\begin{column}{6cm}
+\begin{itemize}
+\item Period (T) - time between peaks
+\item Frequency (f) - oscillations per second
+\item Basic wave equation
+\[ c \cdot T = \lambda = \frac{c}{f}\]
+\item Waves in time
+\[y(t) = A \cdot \sin{(2 \pi f t+ \phi)}\]
+\end{itemize}
+
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Documentation/Lab Notes}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[height=6cm]{fig/labnotes.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+Regular Feedback on Employers: Documentation, Documentation, Documentation
+\begin{itemize}
+\item Use the labnotes.doc (template on Teams) or hardcopy to record lab experiments.
+\item List hypothesis or goal with experiment
+\item Can reference manual, where applicable, for procedures
+\item Reflections and Future Explanations are important steps, don't skip
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Width of Human Hair}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/waterloo.jpg}
+
+\vspace{.25cm}
+
+\includegraphics[width=4cm]{fig/hair.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Mount a hair and shine laser (of wavelength $\lambda$ through it at a screen
+\item Measure distance to the screen ($d$)
+\item Measure the distance between dark spots ($s$)
+\item Calculate the width of the hair ($w$)
+
+\[ w = \frac{2 d \lambda}{s} \]
+
+\item Try someone else's hair or a different color laser.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 \begin{frame}\frametitle{Corpuscular or Waves}
 \begin{columns}
 \begin{column}{5cm}
@@ -1897,31 +1993,7 @@ Every point on a wavefront is a source of wavelets that spread out in the forwar
 \end{frame}
 \end{comment}
 
-\begin{frame}\frametitle{Assignment: Width of Human Hair}
-\begin{columns}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=4cm]{fig/waterloo.jpg}
 
-\vspace{.25cm}
-
-\includegraphics[width=4cm]{fig/hair.jpg}
-\end{center}
-\end{column}
-\begin{column}{7cm}
-\begin{itemize}
-\item Mount a hair and shine laser (of wavelength $\lambda$ through it at a screen
-\item Measure distance to the screen ($d$)
-\item Measure the distance between dark spots ($s$)
-\item Calculate the width of the hair ($w$)
-
-\[ w = \frac{2 d \lambda}{s} \]
-
-\item Try someone else's hair or a different color laser.
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
 
 
 
@@ -1948,8 +2020,9 @@ If we pass light through smaller openings, often called slits, we can use Huygen
 \end{frame}
 
 \begin{frame}\frametitle{Constructive Interference}
+\url{https://www.desmos.com/calculator}
 \begin{center}
-\includegraphics[width=8cm]{fig/constructive.jpg}
+\includegraphics[width=10cm]{fig/constructive.png}
 \end{center}
 
 
@@ -1957,8 +2030,9 @@ If we pass light through smaller openings, often called slits, we can use Huygen
 
 
 \begin{frame}\frametitle{Destructive Interference}
+\url{https://www.desmos.com/calculator}
 \begin{center}
-\includegraphics[width=8cm]{fig/destructive.jpg}
+\includegraphics[width=10cm]{fig/destructive.png}
 \end{center}
 \end{frame}
 
@@ -2001,6 +2075,22 @@ Using small angle assumption\footnote{for small angles ($\theta$) measured in ra
 
 \end{frame}
 
+\begin{frame}\frametitle{Assignment: Double Slit}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/thorDouble.jpg}
+\end{center}
+
+\vspace{1cm}
+
+\begin{itemize}
+\item Calculate the slit distance and slit width for three different double slits. 
+\end{itemize}
+
+\end{frame}
+
+
+
 \begin{frame}\frametitle{Single Slit}
 \begin{columns}
 \begin{column}{5cm}
@@ -2022,7 +2112,7 @@ Using small angle assumption\footnote{for small angles ($\theta$) measured in ra
 Double slit is actually the double slit result times the single slit.
 \end{frame}
 
-\begin{frame}\frametitle{Assignment: Calculate slit width and distance}
+\begin{frame}\frametitle{Assignment: Single Slits and Pinholes}
 
 \begin{center}
 \includegraphics[width=8cm]{fig/thorDouble.jpg}
@@ -2031,7 +2121,7 @@ Double slit is actually the double slit result times the single slit.
 \vspace{1cm}
 
 \begin{itemize}
-\item Calculate the slit distance and slit width for three different single/double slits. 
+\item Calculate the size of the various slits and pinholes using the distance between dark bands 
 \end{itemize}
 
 \end{frame}
@@ -2086,6 +2176,25 @@ for, $m = 1$.
 \begin{center}
 \includegraphics[width=3.8cm]{fig/dg3.jpg}
 \end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Diffraction Grating}
+\begin{columns}
+\begin{column}{3cm}
+
+\begin{center}
+\includegraphics[width=3cm]{fig/diffslide.png}
+\end{center}
+\end{column}
+\begin{column}{7.5cm}
+\begin{itemize}
+\item Setup: Red Laser, Diffraction Slide, Mount, Screen
+\item Place diffraction slide approximately 3 inches from screen
+\item Calculate wavelength of laser using diffraction equation
+\item Repeat for Green and Blue/UV laser
+\end{itemize}
 \end{column}
 \end{columns}
 \end{frame}
