--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -2327,6 +2327,33 @@ Each wavelet to the right was emitted when the wavefront crossed the interface b
 
 \section{Interferometry}
 
+\begin{frame}\frametitle{Optical Component: Beam Splitter}
+
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/BS013.jpg}
+
+\vspace{0.5cm}
+
+\includegraphics[width=4cm]{fig/beamsplitter.png}
+
+
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{enumerate}
+\item Beamsplitter allows half of the light to pass through the diagonal interface and half to reflect
+\item Light can enter at any of the four faces and 1/2 reflected, 1/2 transmissed.
+\item The arrows indicate the path where the specs are guarenteed.
+\end{enumerate}
+\end{column}
+\end{columns}
+
+\end{frame}
+
+
+
 \begin{frame}\frametitle{Michelson Interferometer}
 
 Invented by the American physicist Albert Abraham Michelson in 1887.
@@ -2398,7 +2425,8 @@ Using the ThorLabs Michelson Interferometer Kit:
 \begin{itemize}
 \item Setup per Chapter 4
 \item Complete Preliminary Test (Chapter 6.1)
-\item Determine Laser Wavelenth (Chapter 6.2)
+\item Determine Laser Wavelenth (Chapter 6.2), document using the Labnotes worksheet.
+\item Draw a diagram of the Laser Wavelength setup.
 \item When told: teardown setup, but keep optics in mounts
 \end{itemize}
 \end{column}
@@ -2413,7 +2441,7 @@ Using the ThorLabs Michelson Interferometer Kit:
 \end{center}
 \end{column}
 \begin{column}{6cm}
-Using the ThorLabs Michelson Interferometer Kit:
+Using the ThorLabs Michelson Interferometer Kit and documenting your experiment on the Labnotes worksheet:
 \begin{itemize}
 \item Setup per Chapter 4
 \item Use as spectrometer (Chapter 6.3)
@@ -2439,8 +2467,8 @@ Optional: if instructed, repeat Chapter 6.3 Spectrometer experiment using the la
 \includegraphics[width=4cm]{fig/michelson5.jpg}
 \end{center}
 \end{column}
-\begin{column}{6cm}
-Using the ThorLabs Michelson Interferometer Kit:
+\begin{column}{7cm}
+Using the ThorLabs Michelson Interferometer Kit and documenting your experiment on the Labnotes worksheet:
 \begin{itemize}
 \item Setup per Chapter 4
 \item Measure index of refraction (Chapter 6.5)
