--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -2019,6 +2019,32 @@ While the ray optics method is useful, if light indeed traveled in straight rays
 If we pass light through smaller openings, often called slits, we can use Huygens’s principle to see that light bends. The bending of a wave around the edges of an opening or an obstacle is called diffraction. Diffraction is a wave characteristic and occurs for all types of waves.
 \end{frame}
 
+\begin{frame}\frametitle{Interference}
+\url{https://www.desmos.com/calculator}
+
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/desmos3.png}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{center}
+Constructive
+
+\includegraphics[width=5cm]{fig/desmos4.png}
+
+Destructive
+
+\includegraphics[width=5cm]{fig/desmos5.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{comment}
+
+
 \begin{frame}\frametitle{Constructive Interference}
 \url{https://www.desmos.com/calculator}
 \begin{center}
@@ -2043,7 +2069,7 @@ If we pass light through smaller openings, often called slits, we can use Huygen
 \end{center}
 
 \end{frame}
-
+\end{comment}
 
 \begin{frame}\frametitle{Path Length Difference}
 \begin{columns}
