--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -2724,6 +2724,26 @@ In 1810, French engineer Étienne-Louis Malus studied polarization after casuall
 
 \end{frame}
 
+\begin{frame}\frametitle{Rotating Linear Polarization with Half Wave Plate}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/HWP.png}
+
+\includegraphics[width=5cm]{fig/thorHWP.jpg}
+\end{center}
+
+\end{column}
+\begin{column}{6cm}
+\begin{itemize}
+\item Half-wave plates rotate the axis of polarization for linearly polarized light
+\item The plate is made of Birefringence material where the index of refraction is different along two perpendicular crystal axes
+\item The thickness is set so that light polarizated along one axis is retarded a half-wavelength from the other axis. 
+\end{itemize}
+
+\end{column}
+\end{columns}
+\end{frame}
 
 
 
@@ -2735,14 +2755,6 @@ From \url{https://emanim.szialab.org/}
 \end{center}
 \end{frame}
 
-\begin{frame}\frametitle{Incoming $45^\circ$ with Quarter-Wave Plate}
-From \url{https://emanim.szialab.org/}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/waveplate_45_4.png}
-\end{center}
-\end{frame}
-
 \begin{frame}\frametitle{Incoming $37^\circ$ with Half-Wave Plate}
 From \url{https://emanim.szialab.org/}
 
@@ -2751,11 +2763,78 @@ From \url{https://emanim.szialab.org/}
 \end{center}
 \end{frame}
 
+\begin{frame}\frametitle{Reflection vs Polarization}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/svsp.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+When light in incident on the interface of materials with different indices of refraction: 
+\begin{itemize}
+\item Polarized light that is parallel to the plane of incidence (P-Polarization) is refracted
+\item Polarized light that is perpendicular (senkrecht in German) to the plan (S-Polarization) is transmitted.
+\item The angle were the reflected and refracted angles are at $90^{\circ}$ to each other, the angle of incidence is called the Brewster's Angle.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Polarizing Beam Splitter}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/pbsEd.jpg}
+\includegraphics[width=4cm]{fig/PBS252.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+\begin{itemize}
+\item Similar to an non-polarized beam splitter, it splits the light path.
+\item P-polarization is transmitted, S-polarization is reflected by interface
+\item By changing the polarization direction, the amount of light transmitted vs reflected can be adjusted.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: More Polarization}
+\begin{columns}
+\begin{column}{2cm}
+\begin{center}
+\includegraphics[width=2.5cm]{fig/PBS252b.jpg}
+\end{center}
+\end{column}
+\begin{column}{8.5cm}
+Documenting your work with the Labnotes:
+\begin{itemize}
+\item Mount the half-wave plate on a rotating mount.
+\item Shine the laser through the linear polarizer slide, the half-wave plate, the beamsplitter
+\item Rotate the half-wave plate so all the light transmits through the beamsplitter
+\item Measure the power with the power meter and then the detector connected to an oscilloscope. Find the scaling factor between volts and power.
+\item Rotate the half-wave plate 45 degrees and measure the reflected beam power. (Don't move the detector attached to the o-scope
+\item Rotate the half-wave plate recording both measurements. Convert between volts and power.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+
 \begin{frame}\frametitle{Incoming $37^\circ$ with Quarter-Wave Plate}
 From \url{https://emanim.szialab.org/}
 
 \begin{center}
 \includegraphics[width=10cm]{fig/waveplate_37_4.png}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Incoming $45^\circ$ with Quarter-Wave Plate}
+From \url{https://emanim.szialab.org/}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/waveplate_45_4.png}
 \end{center}
 \end{frame}
 
