--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3119,6 +3119,57 @@ Neils Bohr, Dutch physicist, derived the spectrum from the planetary model and:
 \end{center}
 \end{frame}
 
+\begin{frame}\frametitle{HeNe Laser}
+\begin{center}
+\includegraphics[width=8cm]{fig/HeNe_transitions.jpg}
+\end{center}
+\end{frame}
+
+\section{Entanglement}
+
+\begin{frame}\frametitle{BBO Crystals}
+\begin{center}
+\includegraphics[width=8cm]{fig/BBOcrystal.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Spontaneous Parametric Down Conversion}
+\begin{center}
+\includegraphics[width=8cm]{fig/SPDC.png}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Spontaneous Parametric Down Conversion}
+\begin{center}
+\includegraphics[width=8cm]{fig/SPDC2.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Single Photon?}
+Grangier-Roger-Aspect experiment
+
+\begin{columns}
+\begin{column}{7cm}
+\begin{itemize}
+\item Introduce beamsplitter
+\item Single photon transmitted or reflected, but not both
+\item Autocorrelations: \[g^{(2)}(0) = \frac{N_{TAB} \cdot N_T}{N_{TA} \cdot N_{TB}} \]
+\begin{itemize}
+\item Coherent (Laser): $g^{(2)}(0) = 1$
+\item Classical Light: $g^{(2)}(0) > 1$
+\item Non-Classical Light: $g^{(2)}(0) < 1$
+\end{itemize}
+
+\end{itemize}
+\end{column}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/grangier.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
 
 \section{Schrodenger's Atom}
 
