--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -2871,7 +2871,73 @@ X lags Y by $\frac{\pi}{2}$:
 
 \end{frame}
 
-\section{Quantum Crytography - Quantum Key Distribution}
+\section{Quantum Cryptography - Quantum Key Distribution}
+
+\begin{frame}\frametitle{Crypt}
+\begin{center}
+\includegraphics[width=12cm]{fig/crypt1.png}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Cesear Cypher}
+\begin{columns}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/crypt4.png}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+Caesar cipher or the shift cipher is one of the simplest and most widely known encryption techniques. It is a type of substitution cipher in which each letter in the plaintext is replaced by a letter some fixed number of positions down the alphabet. For example, with a left shift of 3, D would be replaced by A, E would become B, and so on. The method is named after Julius Caesar, who used it in his private correspondence.
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Vernam Cypher}
+
+Encrypt:
+\begin{center}
+\includegraphics[width=10cm]{fig/crypt5a.jpg}
+\end{center}
+
+Decrypt:
+\begin{center}
+\includegraphics[width=10cm]{fig/crypt5b.jpg}
+\end{center}
+
+
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{Crypt}
+\begin{center}
+\includegraphics[width=6cm]{fig/crypt2.png}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Advanced Encryption Standard (AES)}
+
+AES is a symmetric key encryption method developed by a pair of Belgian cryptographers named Joan Daemen and Vincent Rijmen. The AES was published by NIST in 2001. Rijndael protects the critical information of communication networks, financial dealings, and file storage. AES supports 128-bit data blocks using 128, 192, or 256-bit keys. Substitutions, permutations, and mixing are used to secure encryption. The transmitter and receiver share a key for symmetric encryption. Alice and Bob must securely exchange a secret key before sending an AES-encrypted message. Bob can decrypt the message using the same secret key.
+\end{frame}
+
+
+\begin{frame}\frametitle{Crypt}
+\begin{center}
+\includegraphics[width=6cm]{fig/crypt3.png}
+\end{center}
+\end{frame}
+
+
+
+
+
+\begin{frame}\frametitle{Rivest-Shamir-Adleman (RSA)}
+
+Ron Rivest, Adi Shamir, and Leonard Adleman invented RSA in 1977. This encryption uses huge prime numbers and the difficulty of factoring large composite numbers. RSA encrypts and decrypts using public and private keys. The public key is disclosed, but the secret key is concealed. This enables keyless secure communication. Bob's public key lets Alice send Bob an RSA-encrypted message. Bob's private key decrypts the message. Digital signatures and key exchange use RSA. RSA is slower than AES and unsuitable for big data encryption owing to its computational complexity.
+\end{frame}
 
 \begin{frame}\frametitle{Assignmet: Quantum Key Distribution}
 \begin{columns}
